--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -83,22 +83,14 @@
         function getList(pageNum = 1) {
             document.getElementById('toDt').value =
                 i18n.makeUserDate(document.getElementById('searchToDt').value, {'days': 1});
-            restSubmit('get', '/portals/downloads?' + aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum);
-        }
-
-        // REST API
-        function restSubmit(method, url) {
-            const opt = {
-                method: method,
-                url: url,
-                async: false,
-                showProgressbar: false,
-                callbackFunc: function (response) {
-                    document.getElementById('downloadList').innerHTML = response.responseText;
-                    setDateTimeFormat(document.getElementById('downloadList'));
-                }
-            };
-            aliceJs.sendXhr(opt);
+            const urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum;
+            aliceJs.fetchText('/portals/downloads?' + urlParam, {
+                method: 'GET'
+            }).then((htmlData) => {
+                const listBody = document.getElementById('downloadList');
+                listBody.innerHTML = htmlData;
+                setDateTimeFormat(listBody);
+            });
         }
 
         /**
