--- a/src/main/resources/public/scss/document/_modal.scss
+++ b/src/main/resources/public/scss/document/_modal.scss
@@ -91,8 +91,11 @@
             }
           }
           // 연관 관계
-          .z-relation-relation-group {
-            .z-sub-title { margin: auto 0; }
+          .z-relation-group {
+            .z-table-row {
+              height: 2.5rem;
+              @include border($element-border-width, solid, $element-border-color, bottom);
+            }
           }
         }
         .cmdb-ci-content-view {
